# cloud-user-service

./: Cargo.toml  README.md
http-server/: Cargo.toml
http-server/src/: main.rs
http-server/src/controllers/: jwt.rs  mod.rs  root.rs  user.rs
http-server/src/dao/: jwt.rs  mod.rs  response.rs  user.rs
http-server/src/utils/: jwt.rs
migrations/: 20240525183526_user.sql  20240525192341_otp.sql
src/: lib.rs  main.rs
src/config/: db.rs
src/controllers/: jwt.rs  mod.rs
src/dao/: jwt.rs
src/entities/: otp.rs  user.rs
src/repos/: mod.rs  otp.rs  traits.rs  user.rs
src/services/: otp.rs  user.rs
src/utils/: jwt.rs  mod.rs  otp.rs  response.rs  security.rs
user-service/: Cargo.toml
user-service/migrations/: 20240525195413_otp_type.sql  20240525202830_otp_media.sql
user-service/src/: lib.rs
user-service/src/config/: db.rs
user-service/src/repos/: user.rs
user-service/src/services/: mod.rs  otp.rs  user.rs
user-service/src/utils/: mod.rs  security.rs
