[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
user_service = { path = "../user-service" }
dotenvy = "0.15.7"
tokio = { version = "1.0", features = ["full"] }
jsonwebtoken = "9"
serde = {version = "1.0", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json"] }
chrono = "0.4.38"
uuid = "1.8.0"