[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono", "json" ] }
uuid = "1.8.0"
chrono = "0.4.38"
pwhash = "1"
rand = "0.8.5"